# dragibus

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/dragibus/: __init__.py  dragibus.py  features.py  gtf.py  plots.py  polyA.py  report.py  stats.py  utils.py
src/dragibus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dragibus/assets/: polyAhex.motif.profile.txt
src/dragibus/sections/basic_stats/: CDS_counts.py  basic_stats.py  exons_per_transcript.py  feature_counts.py  monoexonic_counts.py  transcripts_length_distribution.py  transcripts_per_gene.py
