[metadata]
name = dragibus
version = 0.0.1
author = Cervin Guyomar
author_email = cervin.guyomar@inrae.fr
description = A tool to evaluate gtf/gff annotation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cguyomar/dragibus
project_urls =
    Bug Tracker = https://github.com/cguyomar/dragibus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = dragibus
python_requires = >=3.6
install_requires = 
    plotly
    pybedtools
    pandas

[options.package_data]
    * = assets/*.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    dragibus = dragibus.dragibus:main



